agegadas correcciones de rutas para 404, agregada pagina 404 y su estilo

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -278,7 +278,7 @@
                   <span>$849.980</span>
                 </div>
                 <a
-                  href="../pages/error404.html"
+                  href="../error404.html"
                   class="btn btn-primary my-2 me-2"
                   >Finalizar Comprar
                   <span class="badge text-bg-secondary">3</span></a
@@ -393,21 +393,21 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Autos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camionetas</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camión</a
                 >
@@ -419,35 +419,35 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Gomería</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Alineado</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Balanceo</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Frenos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Mecánica</a
                 >
@@ -459,28 +459,28 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Consejos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Contacto</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Distribuidores</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Garantía</a
                 >
@@ -503,16 +503,16 @@
             <div>
               <p>Síguenos en nuestras redes:</p>
               <div class="d-flex justify-content-center redes">
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-instagram fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-facebook fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-twitter fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-linkedin fs-3 m-2"></i
                 ></a>
               </div>
