--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -216,21 +216,21 @@
               <ul class="list-unstyled">
                 <li class="mb-4">
                   <a
-                    href="./pages/error404.html"
+                    href="./error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
                     ><i class="bi bi-whatsapp"> (381) 1234567</i></a
                   >
                 </li>
                 <li class="mb-4">
                   <a
-                    href="./pages/error404.html"
+                    href="./error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
                     ><i class="bi bi-whatsapp"> (381) 3894532</i></a
                   >
                 </li>
                 <li class="mb-4">
                   <a
-                    href="./pages/error404.html"
+                    href="./error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
                     ><i class="bi bi-envelope-at-fill">
                       r_neumaticos@.com</i
@@ -239,7 +239,7 @@
                 </li>
                 <li class="mb-4">
                   <p
-                    href="./pages/error404.html"
+                    href="./error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
                   >
                     <i class="bi bi-geo-alt-fill">
@@ -292,21 +292,21 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Autos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camionetas</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camión</a
                 >
@@ -318,35 +318,35 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Gomería</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Alineado</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Balanceo</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Frenos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Mecánica</a
                 >
@@ -358,28 +358,28 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Consejos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Contacto</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Distribuidores</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Garantía</a
                 >
@@ -402,16 +402,16 @@
             <div>
               <p>Síguenos en nuestras redes:</p>
               <div class="d-flex justify-content-center redes">
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-instagram fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-facebook fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-twitter fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-linkedin fs-3 m-2"></i
                 ></a>
               </div>
