--- a/pages/error404.html
+++ b/pages/error404.html
@@ -103,7 +103,7 @@
         <div class="d-flex align-items-center justify-content-center my-5">
           <div class="text-center flex-column">
             <img
-              src="../img/error sin fondo.png"
+              src="../img/errorsinfondo.png"
               class="imagenRuedaPinchada"
               alt="error 404"
               id="imgError404"
@@ -231,16 +231,16 @@
             <div>
               <p>Síguenos en nuestras redes:</p>
               <div class="d-flex justify-content-center redes">
-                <a href="../error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-instagram fs-3 m-2"></i
                 ></a>
-                <a href="../error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-facebook fs-3 m-2"></i
                 ></a>
-                <a href="../error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-twitter fs-3 m-2"></i
                 ></a>
-                <a href="../error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-linkedin fs-3 m-2"></i
                 ></a>
               </div>
