--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2056,21 +2056,21 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Autos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camionetas</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camión</a
                 >
@@ -2082,35 +2082,35 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Gomería</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Alineado</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Balanceo</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Frenos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Mecánica</a
                 >
@@ -2122,28 +2122,28 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Consejos</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Contacto</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Distribuidores</a
                 >
               </li>
               <li>
                 <a
-                  href="./pages/error404.html"
+                  href="./error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Garantía</a
                 >
@@ -2166,16 +2166,16 @@
             <div>
               <p>Siguenos en nuestras redes:</p>
               <div class="d-flex justify-content-start redes">
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-instagram fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-facebook fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-twitter fs-3 m-2"></i
                 ></a>
-                <a href="../pages/error404.html"
+                <a href="./error404.html"
                   ><i class="bi bi-linkedin fs-3 m-2"></i
                 ></a>
               </div>
