corrección de textos, cards y corrección de nav en página 404

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Iniciar sesion"
@@ -209,7 +208,7 @@
           <section class="container my-5">
             <div class="row justify-content-center">
               <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                <div class="card text-center">
+                <div class="card text-center h-100">
                   <div class="card-header bg-dark">
                     <p class="text-light mt-3 fs-3 modeloF">SCORPION-AT</p>
                   </div>
@@ -237,7 +236,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                <div class="card text-center">
+                <div class="card text-center h-100">
                   <div class="card-header bg-dark">
                     <p class="text-light mt-3 fs-3 modeloF">SCORPION-ATR</p>
                   </div>
@@ -266,7 +265,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                <div class="card text-center">
+                <div class="card text-center h-100">
                   <div class="card-header bg-dark">
                     <p class="text-light mt-3 fs-3 modeloF">TR999-1</p>
                   </div>
