--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -278,7 +278,7 @@
                   <span>$849.980</span>
                 </div>
                 <a
-                  href="../error404.html"
+                  href="./error404.html"
                   class="btn btn-primary my-2 me-2"
                   >Finalizar Comprar
                   <span class="badge text-bg-secondary">3</span></a
