--- a/pages/productos.html
+++ b/pages/productos.html
@@ -176,12 +176,12 @@
               <h5 class="display-5 text-center">
                 Tenemos el neumático que buscas, a un precio inigualable.
                 Nuestras ruedas son exportadas a todo el mundo, siendo Europa,
-                USA y Tokio, nuestros principales clientes
+                USA y Japón, nuestros principales clientes.
               </h5>
             </article>
             <div class="col-lg-4 anuncioPC">
               <div>
-                <a href="https://www.ford.com.ar/"
+                <a href="https://www.ford.com.ar/" target="_blank"
                   ><img
                     src="../img/ranger.jpeg"
                     alt="Imagen de auto Ford"
@@ -215,7 +215,7 @@
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
                   El neumático deportivo para uso en carretera, predecesor del
-                  DIABLO ROSSO
+                  DIABLO ROSSO IV
                 </p>
                 <button
                   type="button"
@@ -269,7 +269,7 @@
                   class="btn btn-primary mb-2"
                   data-bs-toggle="modal"
                   data-bs-target="#ModalProductos"
-                  onclick="location.href='./404.html'"
+                  onclick="location.href='./error404.html'"
                 >
                   Ver más
                 </button>
@@ -318,7 +318,7 @@
                   class="btn btn-primary mb-2"
                   data-bs-toggle="modal"
                   data-bs-target="#ModalProductos"
-                  onclick="location.href='./404.html'"
+                  onclick="location.href='./error404.html'"
                 >
                   Ver más
                 </button>
@@ -364,7 +364,7 @@
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
-                  vida útil superior, mayor resistencia al corte y opción número
+                  Vida útil superior, mayor resistencia al corte y opción número
                   uno para aventuras
                 </p>
 
@@ -402,7 +402,7 @@
                   class="btn btn-primary mb-2"
                   data-bs-toggle="modal"
                   data-bs-target="#ModalProductos"
-                  onclick="location.href='./404.html'"
+                  onclick="location.href='./error404.html'"
                 >
                   Ver más
                 </button>
@@ -462,7 +462,7 @@
                       <div class="card-footer bg-dark cardFooterDiv">
                         <p class="text-light">
                           El neumático deportivo para uso en carretera,
-                          predecesor del DIABLO ROSSO
+                          predecesor del DIABLO ROSSO IV
                         </p>
                         <button
                           type="button"
@@ -529,7 +529,7 @@
                           class="btn btn-primary mb-2"
                           data-bs-toggle="modal"
                           data-bs-target="#ModalProductos"
-                          onclick="location.href='./404.html'"
+                          onclick="location.href='./error404.html'"
                         >
                           Ver más
                         </button>
@@ -571,7 +571,7 @@
               <section class="container my-5">
                 <div class="row justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                    <div class="card text-center">
+                    <div class="card text-center h-100">
                       <div class="card-header bg-dark">
                         <p class="text-light mt-3 fs-3 modeloF">SCORPION-AT</p>
                       </div>
@@ -599,7 +599,7 @@
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                    <div class="card text-center">
+                    <div class="card text-center h-100">
                       <div class="card-header bg-dark">
                         <p class="text-light mt-3 fs-3 modeloF">SCORPION-ATR</p>
                       </div>
@@ -620,7 +620,7 @@
                           class="btn btn-primary mb-2"
                           data-bs-toggle="modal"
                           data-bs-target="#ModalProductos"
-                          onclick="location.href='./404.html'"
+                          onclick="location.href='./error404.html'"
                         >
                           Ver más
                         </button>
@@ -628,7 +628,7 @@
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-                    <div class="card text-center">
+                    <div class="card text-center h-100">
                       <div class="card-header bg-dark">
                         <p class="text-light mt-3 fs-3 modeloF">TR999-1</p>
                       </div>
@@ -704,7 +704,7 @@
                       </div>
                       <div class="card-footer bg-dark cardFooterDiv">
                         <p class="text-light">
-                          vida útil superior, mayor resistencia al corte y opción
+                          Vida útil superior, mayor resistencia al corte y opción
                           numero uno para aventuras
                         </p>
 
@@ -743,7 +743,7 @@
                           class="btn btn-primary mb-2"
                           data-bs-toggle="modal"
                           data-bs-target="#ModalProductos"
-                          onclick="location.href='./404.html'"
+                          onclick="location.href='./error404.html'"
                         >
                           Ver más
                         </button>
@@ -2056,21 +2056,21 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Autos</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camionetas</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Camión</a
                 >
@@ -2082,35 +2082,35 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Gomería</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Alineado</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Balanceo</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Frenos</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Mecánica</a
                 >
@@ -2122,28 +2122,28 @@
             <ul class="list-unstyled">
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Consejos</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Contacto</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Distribuidores</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="./errorerror404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
                   >Garantía</a
                 >
@@ -2166,16 +2166,16 @@
             <div>
               <p>Siguenos en nuestras redes:</p>
               <div class="d-flex justify-content-start redes">
-                <a href="./error404.html"
+                <a href="./errorerror404.html"
                   ><i class="bi bi-instagram fs-3 m-2"></i
                 ></a>
-                <a href="./error404.html"
+                <a href="./errorerror404.html"
                   ><i class="bi bi-facebook fs-3 m-2"></i
                 ></a>
-                <a href="./error404.html"
+                <a href="./errorerror404.html"
                   ><i class="bi bi-twitter fs-3 m-2"></i
                 ></a>
-                <a href="./error404.html"
+                <a href="./errorerror404.html"
                   ><i class="bi bi-linkedin fs-3 m-2"></i
                 ></a>
               </div>
