--- a/pages/error404.html
+++ b/pages/error404.html
@@ -57,7 +57,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="./contacto.html"
+                <a class="nav-link" href="./contacto.html"
                   >Contacto</a
                 >
               </li>
